# edmpc

./: .env.example  .gitignore  README.md
data/names/: school_names.csv
data/vector_store/: chroma.sqlite3
edmcp-bubble/: pyproject.toml  server.py
edmcp-bubble/data/: bt_20260125_165336_7507e1da_layout.json
edmcp-bubble/docs/: DEVELOPER_GUIDE.md
edmcp-bubble/edmcp_bubble/: __init__.py
edmcp-bubble/edmcp_bubble/core/: __init__.py  bubblesheet_generator.py  grader.py  grading_manager.py  pdf_converter.py  scanner.py  test_manager.py
edmcp-bubble/edmcp_bubble/ui/: __init__.py  app.py
edmcp-core/: README.md  pyproject.toml
edmcp-core/edmcp_core/: __init__.py  config.py  db.py  knowledge.py  utils.py
edmcp-editcheck/: README.md  pyproject.toml  server.py
edmcp-editcheck/edmcp_editcheck/: __init__.py  auth.py
edmcp-editcheck/edmcp_editcheck/core/: __init__.py  classroom.py  diff_analyzer.py  drive_revisions.py  google_client.py  report_builder.py
edmcp-email/: INTEGRATION.md  pyproject.toml  server.py
edmcp-email/edmcp_email/core/: email_sender.py  emailer.py  report_fetcher.py  student_roster.py
edmcp-essay/: README.md  pyproject.toml  server.py
edmcp-essay/edmcp_essay/: __init__.py
edmcp-essay/edmcp_essay/core/: __init__.py  email_sender.py  job_manager.py  name_loader.py  report_generator.py  student_roster.py
edmcp-essay/edmcp_essay/data/: names
edmcp-essay/edmcp_essay/data/email_templates/: default_feedback.html.j2  default_feedback.txt.j2
edmcp-essay/edmcp_essay/tools/: __init__.py  archive.py  cleanup.py  converter.py  emailer.py  highlighter.py  name_fixer.py  ocr.py  scrubber.py
edmcp-latex/: pyproject.toml  server.py
edmcp-latex/data/artifacts/: .gitkeep
edmcp-latex/edmcp_latex/: __init__.py
edmcp-latex/edmcp_latex/core/: __init__.py  compiler.py  template_manager.py
edmcp-latex/edmcp_latex/templates/: __init__.py  academic.tex  quiz.tex  simple.tex  verse.tex
edmcp-latex/tests/: conftest.py  test_compiler.py  test_server.py  test_templates.py
edmcp-regrade/: UI_DESIGN.md  pyproject.toml  server.py
edmcp-regrade/edmcp_regrade/: __init__.py
edmcp-regrade/edmcp_regrade/core/: __init__.py  grader.py  prompts.py  regrade_job_manager.py  report_generator.py
edmcp-regrade/edmcp_regrade/tools/: __init__.py
edmcp-scrub/: USAGE.md  pyproject.toml  server.py
edmcp-scrub/edmcp_scrub/: __init__.py
edmcp-scrub/edmcp_scrub/core/: document_processor.py  name_loader.py  scrubber.py  student_roster.py
edmcp-testgen/: pyproject.toml  server.py
edmcp-testgen/edmcp_testgen/: __init__.py
edmcp-testgen/edmcp_testgen/core/: __init__.py  formatter.py  prompts.py  question_generator.py  test_job_manager.py
edmcp-testgen/edmcp_testgen/tools/: __init__.py  exporter.py
