[project]
name = "edmcp-bubble"
version = "0.1.0"
description = "Bubble sheet test creation and grading MCP server"
requires-python = ">=3.11"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
    "reportlab>=4.0.0",
    "gradio>=4.0.0",
    "mcp>=1.0.0",
    "opencv-python>=4.8.0",
    "pdf2image>=1.16.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edmcp_bubble"]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }
