[project]
name = "edmcp-core"
version = "0.1.0"
description = "Shared core utilities for edmcp workflow servers"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "sentence-transformers>=2.2.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "llama-index-llms-openai-like>=0.2.0",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
