[project]
name = "edmcp-essay"
version = "0.1.0"
description = "FastMCP server for essay grading workflow"
requires-python = ">=3.10"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
    "pdf2image>=1.2.0",
    "regex>=2023.0",
    "reportlab>=4.0.0",
    "pypdf>=3.0.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
