[project]
name = "edmcp-latex"
version = "0.1.0"
description = "LaTeX document compilation MCP server for educational handouts"
requires-python = ">=3.11"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edmcp_latex"]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
