[project]
name = "edmcp-regrade"
version = "0.1.0"
description = "Essay regrading MCP server with RAG-powered grading"
requires-python = ">=3.11"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edmcp_regrade"]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }
