[project]
name = "edmcp-scrub"
version = "0.1.0"
description = "Document scrubbing MCP server for PII removal"
requires-python = ">=3.11"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
    "regex",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "openai>=1.0.0",
    "pdfplumber>=0.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edmcp_scrub"]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
