[project]
name = "edmcp-testgen"
version = "0.1.0"
description = "Test and answer sheet generation MCP server"
requires-python = ">=3.11"
dependencies = [
    "edmcp-core",
    "fastmcp>=2.0.0",
    "reportlab>=4.0.0",
    "pypdf>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edmcp_testgen"]

[tool.uv.sources]
edmcp-core = { path = "../edmcp-core", editable = true }
